change contact infor

--- a/src/resource/views/partials/footer.hbs
+++ b/src/resource/views/partials/footer.hbs
@@ -18,9 +18,8 @@
           <div class='col-lg-4 col-md-6 col-12'>
             <div class='area_phone_contact'>
               <p class='number_phone'>
-                <i class='fas fa-phone-square'></i>
-                <span>Hotline mua hàng online</span>
-                            <a href='tel:012345678' class='hotline__link'>012345678</a>
+                <i class='fas fa-paper-plane mr-2'></i>
+                            <a target="_blank" href='https://t.me/+84392686494' class='hotline__link'>Click để được tư vấn</a>
 
               </p>
             </div>
@@ -56,12 +55,12 @@
                   <li class='support-item_content-item'>
                     <i class='fas fa-phone-square'></i>
 
-                    <a href="tel:012345678">012345678</a>
+                    <a target='blank' href="https://t.me/+84392686494">+84392686494</a>
                     
                   </li>
                   <li class='support-item_content-item'>
                     <i class='fas fa-paper-plane'></i>
-                    <a href="mailto:gaigoiducpho.com">gaigoiducpho.qn76@gmail.com</a>
+                    <a target='blank' href="https://t.me/+84392686494">tuvanvien</a>
                   </li>
                   <li class='support-item_content-item'></li>
                 </ul>
