--- a/src/resource/views/partials/footer.hbs
+++ b/src/resource/views/partials/footer.hbs
@@ -33,10 +33,10 @@
           <div class='col-lg-4 col-md-6 col-12'>
             <div class='footer_main-item'>
               <div class='support-item_header'>
-                <h3>GÁI GỌI ĐỨC PHỔ</h3>
+                <h3>GÁI GỌI SÀI GÒN</h3>
               </div>
               <div class='support-item_content'>
-                Trang web Gái Gọi Đức Phổ là nơi bạn có thể tìm kiếm và kết nối với những cô gái xinh đẹp, quyến rũ tại Đức Phổ. Chúng tôi cam kết mang đến cho bạn trải nghiệm an toàn, bảo mật và đáng nhớ. Với thông tin chi tiết và hình ảnh chân thật, bạn sẽ dễ dàng lựa chọn được người bạn đồng hành hoàn hảo. Hãy khám phá và tận hưởng những khoảnh khắc tuyệt vời ngay hôm nay!
+                Trang web Gái Gọi SÀI GÒN là nơi bạn có thể tìm kiếm và kết nối với những cô gái xinh đẹp, quyến rũ tại SÀI GÒN. Chúng tôi cam kết mang đến cho bạn trải nghiệm an toàn, bảo mật và đáng nhớ. Với thông tin chi tiết và hình ảnh chân thật, bạn sẽ dễ dàng lựa chọn được người bạn đồng hành hoàn hảo. Hãy khám phá và tận hưởng những khoảnh khắc tuyệt vời ngay hôm nay!
               </div>
               {{!-- <div class='chung-nhan-bo-cong-thuong'>
                <img src="/img/Featured/da-thong-bao-bo-cong-thuong-gif.gif" alt="">
