--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -72,13 +72,13 @@
                     </li>
                     
                     <li class='header__navigation-item'>
-                      <a href='/collections/brand/Miền%20Bắc' class='header__navigation-link'>Miền Bắc</a>
+                      <a href='/collections/brand/Thủ%20Đức' class='header__navigation-link'>Thủ Đức</a>
                     </li>
                     <li class='header__navigation-item'>
-                      <a href='/collections/brand/Miền%20Tây' class='header__navigation-link'>Miền Tây</a>
+                      <a href='/collections/brand/Gò%20Vấp' class='header__navigation-link'>Gò Vấp</a>
                     </li>
                     <li class='header__navigation-item'>
-                      <a href='/collections/brand/Miền%20Trung' class='header__navigation-link'>Miền Trung</a>
+                      <a href='/collections/brand/Quận%201' class='header__navigation-link'>Quận 1</a>
                     </li>
                       </ul>
                   </div>
