--- a/src/resource/views/partials/productFilter.hbs
+++ b/src/resource/views/partials/productFilter.hbs
@@ -13,7 +13,7 @@
                     <div class="group__filter">
 
                         <p class="group__filter--title">
-                            Xuất sứ
+                            Khu vực
                         </p>
                         <ul>
 
