--- a/src/resource/views/products/detailProduct.hbs
+++ b/src/resource/views/products/detailProduct.hbs
@@ -132,7 +132,7 @@
               
             </div>
             <div class="productColor py-3 border-bottom d-flex">
-                <h6 class="productColor__title detailProduct__content--title">Xuất sứ</h6>
+                <h6 class="productColor__title detailProduct__content--title">Khu vực</h6>
                 <div class="productColor__content">
                     <div class='w-100'>
 
