--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -46,7 +46,7 @@
 
     {{!-- GOOGLE  --}}
     <meta name="google-site-verification" content="VO_5KtkE6BSfKBmF_kBHoZN4yjaXrqF4Q6FrrdtmtS8" />
-    <meta name='description' content="Trang web Gái Gọi SÀI GÒN là nơi bạn có thể tìm kiếm và kết nối với những cô gái xinh đẹp, quyến rũ tại SÀI GÒN. Chúng tôi cam kết mang đến cho bạn trải nghiệm an toàn, bảo mật và đáng nhớ. Với thông tin chi tiết và hình ảnh chân thật, bạn sẽ dễ dàng lựa chọn được người bạn đồng hành hoàn hảo. Hãy khám phá và tận hưởng những khoảnh khắc tuyệt vời ngay hôm nay!">
+    <meta name='description' content="Trang web Gái Gọi Đức Phổ là nơi bạn có thể tìm kiếm và kết nối với những cô gái xinh đẹp, quyến rũ tại SÀI GÒN. Chúng tôi cam kết mang đến cho bạn trải nghiệm an toàn, bảo mật và đáng nhớ. Với thông tin chi tiết và hình ảnh chân thật, bạn sẽ dễ dàng lựa chọn được người bạn đồng hành hoàn hảo. Hãy khám phá và tận hưởng những khoảnh khắc tuyệt vời ngay hôm nay!">
 
     <meta property='og:image' content='https://gaigoiducpho.com/img/Products/photo_2024-06-11_23-29-49.jpg'>
 
