--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -72,14 +72,9 @@
                     </li>
                     
                     <li class='header__navigation-item'>
-                      <a href='/collections/brand/Thủ%20Đức' class='header__navigation-link'>Thủ Đức</a>
+                      <a href='/collections/brand/Đức%20Phổ' class='header__navigation-link'>Đức Phổ</a>
                     </li>
-                    <li class='header__navigation-item'>
-                      <a href='/collections/brand/Gò%20Vấp' class='header__navigation-link'>Gò Vấp</a>
-                    </li>
-                    <li class='header__navigation-item'>
-                      <a href='/collections/brand/Quận%201' class='header__navigation-link'>Quận 1</a>
-                    </li>
+                    
                       </ul>
                   </div>
 
