--- a/src/resource/views/policy/introduce.hbs
+++ b/src/resource/views/policy/introduce.hbs
@@ -1,18 +1,18 @@
 <div class="policy introduce">
-    <h2 class='policy-heading'>Giới thiệu về Gái Gọi SÀI GÒN</h2>
+    <h2 class='policy-heading'>Giới thiệu về Gái Gọi Đức Phổ</h2>
     <p>
-        Gái Gọi SÀI GÒN là trang web chuyên cung cấp dịch vụ kết nối với những cô gái xinh đẹp và quyến rũ tại SÀI GÒN. Với sự đam mê và tâm huyết của đội ngũ quản lý, chúng tôi cam kết mang đến cho khách hàng những trải nghiệm tốt nhất và dịch vụ chăm sóc khách hàng chu đáo nhất.
+        Gái Gọi Đức Phổ là trang web chuyên cung cấp dịch vụ kết nối với những cô gái xinh đẹp và quyến rũ tại SÀI GÒN. Với sự đam mê và tâm huyết của đội ngũ quản lý, chúng tôi cam kết mang đến cho khách hàng những trải nghiệm tốt nhất và dịch vụ chăm sóc khách hàng chu đáo nhất.
     </p>
 
     <p>
-        Với mục tiêu trở thành điểm đến số một của những ai đang tìm kiếm sự đồng hành và thư giãn, Gái Gọi SÀI GÒN luôn cập nhật những hồ sơ mới nhất và chân thực nhất. Chúng tôi tự hào là địa chỉ đáng tin cậy, mang đến cho bạn những lựa chọn phong phú và đa dạng.
+        Với mục tiêu trở thành điểm đến số một của những ai đang tìm kiếm sự đồng hành và thư giãn, Gái Gọi Đức Phổ luôn cập nhật những hồ sơ mới nhất và chân thực nhất. Chúng tôi tự hào là địa chỉ đáng tin cậy, mang đến cho bạn những lựa chọn phong phú và đa dạng.
     </p>
 
     <p>
-        Không chỉ cung cấp những dịch vụ tốt nhất, Gái Gọi SÀI GÒN còn tận tâm hỗ trợ khách hàng trong quá trình lựa chọn người bạn đồng hành phù hợp với nhu cầu và sở thích của mình. Với đội ngũ nhân viên giàu kinh nghiệm và tận tình, chúng tôi luôn cam kết mang đến cho bạn một trải nghiệm đáng nhớ và hài lòng.
+        Không chỉ cung cấp những dịch vụ tốt nhất, Gái Gọi Đức Phổ còn tận tâm hỗ trợ khách hàng trong quá trình lựa chọn người bạn đồng hành phù hợp với nhu cầu và sở thích của mình. Với đội ngũ nhân viên giàu kinh nghiệm và tận tình, chúng tôi luôn cam kết mang đến cho bạn một trải nghiệm đáng nhớ và hài lòng.
     </p>
 
     <p>
-        Nếu bạn đang tìm kiếm một địa chỉ kết nối uy tín, chất lượng và đa dạng về sự lựa chọn, Gái Gọi SÀI GÒN là sự lựa chọn tuyệt vời. Hãy đến và trải nghiệm ngay hôm nay để có được những giây phút thư giãn và thoải mái nhất.
+        Nếu bạn đang tìm kiếm một địa chỉ kết nối uy tín, chất lượng và đa dạng về sự lựa chọn, Gái Gọi Đức Phổ là sự lựa chọn tuyệt vời. Hãy đến và trải nghiệm ngay hôm nay để có được những giây phút thư giãn và thoải mái nhất.
     </p>
 </div>
