--- a/src/resource/views/products/detailProduct.hbs
+++ b/src/resource/views/products/detailProduct.hbs
@@ -39,8 +39,8 @@
                         <span>|</span>
                     </div>
 
-                    <div class='detailProduct__content--name-des__wraper'>Mã SP:<h5 class='detailProduct__content--name-des__content'>{{productInfor.productCode}}</h5> 
-                    </div>
+                    {{!-- <div class='detailProduct__content--name-des__wraper'>Mã SP:<h5 class='detailProduct__content--name-des__content'>{{productInfor.productCode}}</h5> 
+                    </div> --}}
 
                     
                 </div>
@@ -222,7 +222,7 @@
                 <!-- HTML !-->
 
 
-                <a  target='_blank' href="https://t.me/+84392686494">
+                <a  target='_blank' href="https://t.me/haohanmom">
                       <button class="button-34 d-flex align-items-center" role="button">Book ngay <i style='font-size:25px'class="fa-brands fa-telegram ml-3"></i></button>
                 </a>
               
