--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -135,6 +135,7 @@ a:hover {
 }
 
 .btn-container__btn {
+  border-radius: 10px;
   min-width: 139px;
   padding: 10px 25px;
   background-color: transparent;
@@ -166,6 +167,7 @@ a:hover {
 
 .btn-container__background {
   position: absolute;
+  border-radius: 10px;
   top: 0;
   width: 100%;
   height: 43px;
