--- a/src/resource/scss/_global.scss
+++ b/src/resource/scss/_global.scss
@@ -9,7 +9,7 @@
     }
   }
   .btn-container__btn {
-    
+    border-radius: 10px;
     min-width: 139px;
     // width: 139px;
     padding: 10px 25px;
@@ -37,6 +37,8 @@
   }
   .btn-container__background {
     position: absolute;
+    border-radius: 10px;
+
     top: 0;
     width: 100%;
     height: 43px;
