--- a/src/resource/views/email.hbs
+++ b/src/resource/views/email.hbs
@@ -756,7 +756,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:0px 10px 10px;font-family:'Lato',sans-serif;" align="left">
         
   <div class="v-text-align" style="line-height: 140%; text-align: center; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 140%;">&copy; 2024 Company:GÁI GỌI SÀI GÒN. All Rights Reserved.</p>
+    <p style="font-size: 14px; line-height: 140%;">&copy; 2024 Company:Gái Gọi Đức Phổ. All Rights Reserved.</p>
   </div>
 
       </td>
